--- a/css/main.scss
+++ b/css/main.scss
@@ -98,6 +98,7 @@
         }
       }
       .add__btn {
+        cursor: pointer;
         height: 30px;
         background: rgba(155, 155, 155, 0.3);
         border-radius: 3px;
